# raytrace-rs

./: Cargo.toml  README.md
scenes/: cornellbox.json
src/: color.rs  intersectable.rs  main.rs  par_buffer.rs  plane.rs  ray.rs  renderer.rs  scene.rs  scenedesc.rs  sphere.rs  util.rs
src/geom/: aabb.rs  axis.rs  bbox.rs  bvh.rs  bvhcache.rs  cube.rs  intersectable.rs  intersection.rs  interval.rs  mod.rs  plane.rs  quad.rs  ray.rs  rotation.rs  scale.rs  scaling.rs  sphere.rs  translation.rs  triangle.rs  trimesh.rs
src/lighting/: color.rs  diffuselight.rs  lambertian.rs  material.rs  metal.rs  mod.rs
src/lighting/texture/: checkerboard.rs  image.rs  mod.rs  scaletex.rs  solidcolor.rs
src/math/: interval.rs  mod.rs  onlinemean.rs  raypacket.rs  screenspace.rs  welford.rs
src/rendering/: camera.rs  mod.rs  par_buffer.rs  render_surface.rs  renderer.rs  scene.rs  scenedesc.rs
src/shape/: mod.rs  plane.rs  sphere.rs  translation.rs
src/sys/: mod.rs  par_buffer.rs  render_surface.rs
