[package]
name = "raytracer"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.6"
itertools = "0.14.0"
nalgebra = { version = "0.33.2", features = ["rand"] }
obj = "0.10.2"
rand = "0.9.0"
rayon = "1.10.0"
sdl2 = "0.37.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
